--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,8 @@ name: CI
 # events but only for the master branch
 on:
   push:
+    paths: 
+    - 'trabalho/**'
     branches: [ master ]
   pull_request:
     branches: [ master ]
