--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,29 @@
-name: CI
+name: Node.js CI
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches:
+      - master # ou a branch que você deseja acionar
 
 jobs:
-  build-teste:
+  build:
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - uses: actions/checkout@v2
-      
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-
-    - name: Use Node ${{ matrix.node-version }}
-      uses: actions/setup-node@v1
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
       with:
-        node-version: ${{ matrix.node-version }}
-        spec: trabalho/test/*
-    - run: npm install
-    - run: npm test
+        node-version: 14 
+
+    - name: Navigate to project directory
+      run: |
+        cd trabalho/test
+        npm install
+
+    - name: Run tests
+      run: |
+        cd trabalho/test
+        npm test
